--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:android": "ionic capacitor run android -l --external",
+    "start:ios": "ionic capacitor run ios --livereload --external",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,7 +34,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.5",
-    "@angular/cli": "~9.1.5",
+    "@angular/cli": "9.1.12",
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
