--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,6 +2,7 @@
   "appId": "io.ionic.starter",
   "appName": "tocoma-app",
   "bundledWebRuntime": false,
+  "linuxAndroidStudioPath": "/home/ander/android-studio/bin/studio.sh",
   "npmClient": "npm",
   "webDir": "www",
   "plugins": {
